4.0 regression: leak on sout error

vlc video.mpg --sout '#failhere'

ends with:

=================================================================
==234095==ERROR: LeakSanitizer: detected memory leaks

Direct leak of 28 byte(s) in 1 object(s) allocated from:
    #0 0x7f7b81b797a7 in __interceptor_strdup ../../../../src/libsanitizer/asan/asan_interceptors.cpp:454
    #1 0x7f7b81000a82 in input_resource_RequestSout ../../src/input/resource.c:603
    #2 0x7f7b80f759fc in InitSout ../../src/input/input.c:808
    #3 0x7f7b80f7d21b in Init ../../src/input/input.c:1320
    #4 0x7f7b80f71893 in Run ../../src/input/input.c:466
    #5 0x7f7b7fd0aead in start_thread nptl/pthread_create.c:463

SUMMARY: AddressSanitizer: 28 byte(s) leaked in 1 allocation(s).