resource: fix memory leak on error (fixes #26334)